--- a/index.html
+++ b/index.html
@@ -249,6 +249,177 @@
                 </div>
             </div>
         </section>
+        <section class="downloadlinks__section">
+            <div class="container">
+                <div class="downloadlinks">
+                    <div class="downloadlinks__img-container">
+                        <img src="img/content/Mask Group.png" alt="Mask Group" class="downloadlinks__phone">
+                    </div>
+                    <div class="downloadlinks__text-container">
+                        <h1 class="downloadlinks__h1">
+                            Simple Way To Order Your Food
+                        </h1>
+                        <div class="dodownloadlinks__text-desc">
+                            Some food has looked so awful that it's looked like something that the dog's brought home,
+                            yet
+                            after
+                            one mouthful I've been left eating my thoughts.
+                        </div>
+                        <ul class="downloadlinks__ul">
+                            <li class="downloadlinks__item">
+                                <a href="!#" class="downloadlinks__item-link">
+                                    <img src="img/content/Group 91.png" alt="Group 91" class="downloadlinks__item-img">
+
+                                </a>
+                                <span class="downloadlinks__desc"> Select Your Food </span>
+
+                            </li>
+                            <li class="downloadlinks__item">
+                                <a href="#!" class="downloadlinks__item-link">
+                                    <img src="img/content/Group101.png" alt="Group 91" class="downloadlinks__item-img">
+
+                                </a>
+                                <a href="#!" class="">
+
+
+                                </a>
+                                <span class="downloadlinks__desc"> Add To Cart </span>
+
+                            </li>
+                            <li class="downloadlinks__item">
+                                <a href="!#" class="downloadlinks__item-link">
+                                    <img src="img/content/Group 100.png" alt="Group 91" class="downloadlinks__item-img">
+
+                                </a>
+                                <span class="downloadlinks__desc"> Order Your Food </span>
+
+                            </li>
+                        </ul>
+                        <div class="app__market">
+                            <a href="!#" class="app__logo">
+                                <img src="img/content/logo-app-store.png alt=" alt="logo-app-store">
+                            </a>
+                            <a href="!#" class="app__logo">
+                                <img src="img/content/google-play.png alt=" alt="google-play">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <section class="questions">
+            <div class="container">
+                <div class="questions__block">
+                    <div class="questions__block-items">
+                        <div class="questions__block-text">
+                            Have Question in Mind? Let us help you
+
+                        </div>
+                        <div class="questions__block-form">
+                            <form action="questions" class="questions__form">
+                                <input type="text" name="questions" required="questions" class="questions__text"
+                                    placeholder="Enter your question">
+                                <input type="submit" name="submit_btn" value="Send" class="questions__submit">
+                            </form>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__items">
+                    <div class="socialnetwork">
+                        <div class="footer__logo">
+                            <a href="#!" class="logo">
+                                <img src="img/content/images-removebg-preview 1.png" alt="logo" class="logo__pic">
+                            </a>
+                        </div>
+                        <div class="somefood">
+                            Some food has looked so awful that it's looked like something that the dog's brought home.
+                        </div>
+                        <div class="FllowUs">
+                            <div class="FllowUs__text">
+                                Fllow Us
+                            </div>
+                            <div class="social">
+                                <div class="social__item">
+                                    <img src="img/content/facebook.png" alt="facebook" class="social__img">
+                                </div>
+                                <div class="social__item">
+                                    <img src="img/content/twitter.png" alt="twitter" class="social__img">
+                                </div>
+                                <div class="social__item">
+                                    <img src="img/content/instagram.png" alt="instagram" class="social__img">
+                                </div>
+                                <div class="social__item">
+                                    <img src="img/content/linkedin.png" alt="linkedin" class="social__img">
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="footer__navigation">
+
+                        <a href="#!" class="footer__navigation-item">Home</a>
+
+                        <a href="#!" class="footer__navigation-item">Product</a>
+
+                        <a href="#!" class="footer__navigation-item">Blog</a>
+
+                        <a href="#!" class="footer__navigation-item">Pricing</a>
+
+                        <a href="#!" class="footer__navigation-item">Testimonials</a>
+
+                        <a href="#!" class="footer__navigation-item">Contact Us</a>
+                    </div>
+                    <div class="footer__information">
+
+                        <a href="#!" class="footer__information-item">Delivery Information</a>
+
+                        <a href="#!" class="footer__information-item">Privacy Policy</a>
+
+                        <a href="#!" class="footer__information-item">Terms & Condition</a>
+
+                        <a href="#!" class="footer__information-item">Search Terms</a>
+
+                        <a href="#!" class="footer__information-item">Order & Return</a>
+                    </div>
+                    <div class="Newsletter">
+                        <div class="Newsletter__text">
+                            Newsletter
+                        </div>
+                        <form action="Subscribe" class="Subscribe__form">
+                            <input type="text" name="email" required="email" class="Subscribe__text"
+                                placeholder="Your Email">
+                            <input type="submit" name="Subscribe_btn" value="Subscribe" class="Subscribe__submit">
+                        </form>
+                        <div class="paymentsystems">
+                            <div class="PP">
+                                <a href="#!" class="PP__link">
+                                    <img src="img/content/PP.png" alt="PP" class="PP__img">
+                                </a>
+                            </div>
+                            <div class="mastercard">
+                                <a href="#!" class="mastercard__link">
+                                    <img src="img/content/mastercard.png" alt="mastercard" class="mastercard__img">
+                                </a>
+                            </div>
+                            <div class="visa">
+                                <a href="#!" class="visa__link">
+                                    <img src="img/content/visa.png" alt="PP" class="visa__img">
+                                </a>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
